--- a/Paginas/Main.html
+++ b/Paginas/Main.html
@@ -5,7 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="../Estilos/main.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <title>Main</title>
+
+    <script src="../alertify/alertify.js"></script>
+    <link rel="stylesheet" href="../alertify/alertify.css">
+
+    <!--  JS -->
+    <script src="../Script/jquery.js"></script>
+    <script src="../Script/jquery-3.5.1.min.js"></script>
+    <title>Panel de control</title>
 </head>
 <body>
 
@@ -59,7 +66,7 @@
         <i class="fa fa-caret-down"></i>
       </button>
       <div class="dropdown-container">
-        <a href="#">Nuevas orden</a>
+        <a id="Nueva-orden">Nuevas orden</a>
         <a href="#">Editar orden</a>
         <a href="#">Eliminar orden</a>
         <a href="#">Consultar ordenes</a>
@@ -85,7 +92,7 @@
         </div>
         
         <div class="right-img" id="right-img">
-          <img style="margin: 0 auto; margin-top: 25px; max-width: max-content;" width="260px" height="140px" src="../Images/logo-tec_original.png" alt="" id="itesaLogo">
+          <img style="margin: 0 auto; margin-top: 25px; max-width: max-content;" width="260px" height="135px" src="../Images/logo-tec_original.png" alt="" id="itesaLogo">
         </div>
         <!--  -->
         <div class="bottom-info" id="bottom-info">
@@ -132,6 +139,9 @@ for (i = 0; i < dropdown.length; i++) {
   });
 }
 
+$("#Nueva-orden").click(function(){
+  alertify.alert("HA", "ASASD");
+});
     </script>
 
   </body>
