--- a/Paginas/Formulario_Orden.html
+++ b/Paginas/Formulario_Orden.html
@@ -10,10 +10,11 @@
 </head>
 
 <body style="padding-left: 25px; padding-top: 25px; padding-bottom: 25px; padding-right: 25px;">
-    <h1 style="text-align: center;">Nueva orden de compra</h1>
+    
     <section class="d-flex justify-content-center"
-        style="padding-left: 20px; padding-top: 20px; padding-bottom: 20px; padding-right: 20px; background-color: #d2dae6;">
+        style="padding-left: 20px; padding-top: 20px; padding-bottom: 20px; padding-right: 20px; background-color: #d2dae6; border-radius:10px; box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);">
         <form class="row g-4">
+            <h2 style="text-align: center;">Agregar nueva orden de compra</h2>
             <div class="col-md-6">
                 <label for="Fecha_inicio" class="form-label">Fecha de realización</label>
                 <input type="date" class="form-control" id="Fecha_inicio" required>
@@ -52,7 +53,7 @@
             </div>
             <div class="col-4">
                 <label class="col-2"></label>
-                <button type="submit" class="btn btn-primary col-8" style="height: 50px; min-height: auto; font-size: 20px;">Enviar</button>
+                <button type="submit" class="btn btn-primary col-8" style="width:auto; min-height: auto; font-size: auto;">Agregar orden</button>
                 <label class="col-2"></label>
             </div>
             <div class="col-4">
