--- a/Paginas/Main.html
+++ b/Paginas/Main.html
@@ -12,6 +12,7 @@
     <!--  JS -->
     <script src="../Script/jquery.js"></script>
     <script src="../Script/jquery-3.5.1.min.js"></script>
+    <script src="../Script/Formularios_Js/FormsScripts.js"></script>
     <title>Panel de control</title>
 </head>
 <body>
@@ -56,7 +57,7 @@
         <i class="fa fa-caret-down"></i>
       </button>
       <div class="dropdown-container">
-        <a href="#">Nuevo diseño de pieza</a>
+        <a id="Nuevo-diseno" class="enlace">Nuevo diseño de pieza</a>
         <a href="#">Editar diseño de pieza</a>
         <a href="#">Eliminar diseño de pieza</a>
         <a href="#">Consultar diseños</a>
@@ -66,7 +67,7 @@
         <i class="fa fa-caret-down"></i>
       </button>
       <div class="dropdown-container">
-        <a id="Nueva-orden">Nuevas orden</a>
+        <a id="Nueva-orden" class="enlace">Nueva orden</a>
         <a href="#">Editar orden</a>
         <a href="#">Eliminar orden</a>
         <a href="#">Consultar ordenes</a>
@@ -92,7 +93,7 @@
         </div>
         
         <div class="right-img" id="right-img">
-          <img style="margin: 0 auto; margin-top: 25px; max-width: max-content;" width="260px" height="135px" src="../Images/logo-tec_original.png" alt="" id="itesaLogo">
+          <img style="margin: 0 auto; margin-top:15%; max-width: max-content;" width="260px" height="130px" src="../Images/logo-tec_original.png" alt="" id="itesaLogo">
         </div>
         <!--  -->
         <div class="bottom-info" id="bottom-info">
@@ -140,7 +141,19 @@ for (i = 0; i < dropdown.length; i++) {
 }
 
 $("#Nueva-orden").click(function(){
-  alertify.alert("HA", "ASASD");
+  document.getElementById("ControlCentral").innerHTML="";
+  $("#ControlCentral").load("Formulario_Orden.html");
+  closeNav();
+  const enlaces = document.getElementsByClassName("enlace");
+  enlaces.setAttribute('color', 'rgb(129, 129, 129)');
+});
+
+$("#Nuevo-diseno").click(function(){
+  document.getElementById("ControlCentral").innerHTML="";
+  $("#ControlCentral").load("Formulario_Diseños.html");
+  closeNav();
+  const enlaces = document.getElementsByClassName("enlace");
+  enlaces.setAttribute('color', 'rgb(129, 129, 129)');
 });
     </script>
 
