--- a/Paginas/Formulario_Diseños.html
+++ b/Paginas/Formulario_Diseños.html
@@ -13,7 +13,7 @@
    
     <section class="d-flex justify-content-center"
         style="padding-left: 20px; padding-top: 20px; padding-bottom: 20px; padding-right: 20px; background-color: #d2dae6;  border-radius:10px; box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);" >
-        <form class="row g-4">
+        <form class="row g-4" id="form_nuevoD">
             <h2 style="text-align: center;">Agregar nuevo diseño de pieza</h2>
             <div class="col-md-4">
                 <label for="No_diseñoFD" class="form-label">Numero de diseño</label>
