--- a/Paginas/Formulario_Diseños_Editar.html
+++ b/Paginas/Formulario_Diseños_Editar.html
@@ -15,7 +15,7 @@
         style="padding-left: 20px; padding-top: 20px; padding-bottom: 20px; padding-right: 20px; background-color: #d2dae6;  border-radius:10px; box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);" >
         <form class="row g-4">
             
-            <h2 class="col-md-12" style="text-align: center;">Editar un diseño de pieza</h2>
+            <h2 class="col-md-12" style="text-align: center;">Editar diseño de pieza</h2>
             <div class="col-md-4">
                 <label for="No_diseñoFD" class="form-label">Numero de diseño</label>
                 <input type="text" class="form-control"  id="No_disenoFD" placeholder="Numero de diseño" required>
