Buscar pieza finalizado versión 1

--- a/Paginas/Formulario_Diseños_Editar.html
+++ b/Paginas/Formulario_Diseños_Editar.html
@@ -22,7 +22,7 @@
             </div>
             <div class="col-4">
                 <br>
-                <input  onclick="return buscar_Pieza();"  type="button" class="btn btn-primary col-12" style="height: 40px; width: 150px; min-height: auto; font-size: auto; text-align: center;" value="Buscar diseño">
+                <input  onclick="return buscar_Pieza();" id="btn_Buscar" type="button" class="btn btn-primary col-12" style="height: 40px; width: 150px; min-height: auto; font-size: auto; text-align: center;" value="Buscar diseño">
             </div>
             <div class="col-4" >
             </div>
@@ -89,7 +89,7 @@
             <div class="col-4" >
             </div>
             <div class="col-4" >
-                <input  onclick="return nueva_Pieza();"  type="button" class="btn btn-primary col-12" style="height: 50px; min-height: auto; font-size: auto;" value="Editar diseño" disabled>
+                <input  onclick="return nueva_Pieza();" id="btn-update"  type="button" class="btn btn-primary col-12" style="height: 50px; min-height: auto; font-size: auto;" value="Editar diseño" disabled>
             </div>
             <div class="col-4" >
             </div>
