Editar piezas finalizado maybe (24/07/2023)

--- a/Paginas/Formulario_Diseños_Editar.html
+++ b/Paginas/Formulario_Diseños_Editar.html
@@ -89,7 +89,7 @@
             <div class="col-4" >
             </div>
             <div class="col-4" >
-                <input  onclick="return nueva_Pieza();" id="btn-update"  type="button" class="btn btn-primary col-12" style="height: 50px; min-height: auto; font-size: auto;" value="Editar diseño" disabled>
+                <input  onclick="return actualizar_Pieza();" id="btn-update"  type="button" class="btn btn-primary col-12" style="height: 50px; min-height: auto; font-size: auto;" value="Editar diseño" disabled>
             </div>
             <div class="col-4" >
             </div>
