--- a/Paginas/Main.html
+++ b/Paginas/Main.html
@@ -59,7 +59,7 @@
       <div class="dropdown-container">
         <a id="Nuevo-diseno" class="enlace">Nuevo diseño de pieza</a>
         <a id="Editar-diseno" class="enlace">Editar diseño de pieza</a>
-        <a href="#">Eliminar diseño de pieza</a>
+        <!-- <a href="#">Eliminar diseño de pieza</a> -->
         <a href="#">Consultar diseños</a>
       </div>
       <!--  -->
