Consultas con busqueda filtrada terminado

--- a/Paginas/Main.html
+++ b/Paginas/Main.html
@@ -167,17 +167,18 @@ $("#Editar-diseno").click(function(){
 $("#Consultar-diseno").click(function(){
   
   document.getElementById("ControlCentral").innerHTML="";
-  $("#ControlCentral").load("Formulario_Diseños_Consulta.html");
+  $("#ControlCentral").load("Formulario_Diseños_Consulta.php");
   closeNav();
   const enlaces = document.getElementsByClassName("enlace");
   enlaces.setAttribute('color', 'rgb(129, 129, 129)');
   
-  var Window_with;
-  Window_with = window.innerWidth;
-  if(Window_with<=768){
-    alert("Mobile detected");
-    document.getElementById("ControlCentral").style.width = "1023px";
-  }
+  // var Window_with;
+  // Window_with = window.innerWidth;
+  // if(Window_with<=768){
+  //   alert("Mobile detected");
+  //   document.getElementById("ControlCentral").style.width = "1023px";
+    
+  // }
 });
     </script>
 
