--- a/Index.html
+++ b/Index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="../Estilos/login.css">
-    <script src="../Script/login.js"></script>
+    <link rel="stylesheet" type="text/css" href="Estilos/login.css">
+    <script src="Script/login.js"></script>
     <title>Login</title>
 </head>
 <body>
