--- a/Paginas/Formulario_Orden.html
+++ b/Paginas/Formulario_Orden.html
@@ -46,7 +46,7 @@
             </div>
             <div class="col-md-6">
                 <label for="Numero_de_piezas" class="form-label">Cantidad de piezas</label>
-                <input type="number" class="form-control" id="Numero_de_piezas" placeholder="Cantida de piezas para la orden" required>
+                <input type="number" class="form-control" id="Numero_de_piezas" placeholder="Cantidad de piezas para la orden" required>
             </div>
             <!-- ------------------------------------------------------------------------------------------ -->
             <div class="col-4">
