SAlidas y entradas bootstrap

--- a/Paginas/Formulario_Entrada_Almacen.html
+++ b/Paginas/Formulario_Entrada_Almacen.html
@@ -36,10 +36,12 @@
                 <input type="text" class="form-control" id="Cantidad_de_piezas" placeholder="Cantidad de piezas" required>
             </div>
             <!-- ---------------------------------------------------------------------------------------- -->
-            <div class="col-12" >
+            <div class="col-4"></div>
+            <div class="col-4" >
                 <input  onclick="return RegistrarEntrada();"  type="button" class="btn btn-primary col-12" style="height: 50px;
                 min-height: auto; font-size: auto;" value="Registrar entrada">
             </div>
+            <div class="col-4"></div>
         </form>
     </section>
 </body> 
