--- a/Paginas/Formulario_Salidas_Almacen.html
+++ b/Paginas/Formulario_Salidas_Almacen.html
@@ -36,10 +36,12 @@
                     required>
             </div>
             <!-- ---------------------------------------------------------------------------------------- -->
-            <div class="col-12">
+            <div class="col-4"></div>
+            <div class="col-4">
                 <input onclick="return RegistrarSalida();" type="button" class="btn btn-primary col-12"
                     style="height: 50px; min-height: auto; font-size: auto;" value="Registrar salida">
             </div>
+            <div class="col-4"></div>
         </form>
     </section>
 </body>
