--- a/Paginas/Inicio_corte.html
+++ b/Paginas/Inicio_corte.html
@@ -39,7 +39,7 @@
 
                 <div class="col-md-4">
                     <label for="Cantidad" class="form-label">Cantidad</label>
-                    <input type="text" class="form-control" id="P_cantidad" placeholder="Ingresa cantidad del proceso" required>
+                    <input type="text" class="form-control" id="P_cantidad" placeholder="Ingresa cantidad piezas" required>
                 </div>
                 <div class="col-md-4"></div>
                 <input onclick="AgregarProceso();" type="button" class="btn btn-primary col-4" value="Agregar proceso">
