--- a/Paginas/Formulario_Lohr.html
+++ b/Paginas/Formulario_Lohr.html
@@ -18,7 +18,7 @@
         style="padding-left: 20px; padding-top: 20px; padding-bottom: 20px; padding-right: 20px;
         background-color: #d2dae6;  border-radius:10px; box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);" >
         <form id ="form_nuevoD" class="row g-4">
-            <h2 style="text-align: center;">Detallado</h2>
+            <h2 style="text-align: center;">Lohrcito</h2>
             <div class="col-md-3">
                 <label for="TurnoFD" class="form-label">Turno</label>
                 <select id="TurnoFD" class="form-select">
