--- a/Paginas/Inicio_corte.html
+++ b/Paginas/Inicio_corte.html
@@ -42,7 +42,7 @@
                     <input type="text" class="form-control" id="P_cantidad" placeholder="Ingresa cantidad piezas" required>
                 </div>
                 <div class="col-md-4"></div>
-                <input onclick="AgregarProceso();" type="button" class="btn btn-primary col-4" value="Agregar proceso">
+                <input onclick="AgregarProceso();" type="button" class="btn btn-primary col-md-4" value="Agregar">
                 <div class="col-md-4"></div>
                   
             </form>
